--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,16 @@
 # -----------------------------------------------------------------------------
 # Site settings
 # -----------------------------------------------------------------------------
+markdown: kramdown
+kramdown:
+  input: GFM
+  hard_wrap: false
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Preisha
 middle_name:
 last_name: Mishra
 contact_note: >
-preisha.mishra@rutgers.edu 
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
