--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,10 @@ last_name: Mishra
 contact_note: preisha.mishra@rutgers.edu >
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
 Preisha's Portfolio
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
+footer_text: #footer test
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: 🐦‍🔥 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: 🦩    # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://pzxyxz.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
