--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
-last_name: Name
+first_name: Preisha
+middle_name: 
+last_name: Mishra
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
@@ -277,7 +277,6 @@ display_categories: ["external-services"] # these categories will be displayed o
 scholar:
   last_name: [Mishra]
   first_name: [Preisha]
-
   style: apa
   locale: en
 
